--- a/Table/index.html
+++ b/Table/index.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Table</title>
   </head>
 
   <body>
+    <table
+      style="font-size: 1.8rem"
+      bgcolor="black"
+      border="1"
+      width="1260"
+      height="245"
+    >
+      <tr bgcolor="grey" align="center" style="color: white">
+        <th width="180" height="35">Company</th>
+        <th width="180" height="35">Model</th>
+        <th width="180" height="35">Phone</th>
+        <th width="180" height="35">City</th>
+        <th width="180" height="35">Country</th>
+        <th width="180" height="35">Staff</th>
+        <th width="180" height="35">Industry</th>
+      </tr>
+      <br />
 
-    <table style="font-size: 1.8rem;" bgcolor="black" border="1" width="1260" height="245">
+      <tr bgcolor="lightgrey" align="center">
+        <td>Dodge</td>
+        <td>Challenger</td>
+        <td>800-22-7900</td>
+        <td>Auburn Hills</td>
+        <td>USA</td>
+        <td>10,000</td>
+        <td>Automotive</td>
+      </tr>
+      <br />
 
-    <tr bgcolor="grey" align="center" style="color:white">
-      <th width="180" height="35">Company</th>
-      <th width="180" height="35">Model</th>
-      <th width="180" height="35">Phone</th>
-      <th width="180" height="35">City</th>
-      <th width="180" height="35">Country</th>
-      <th width="180" height="35">Staff</th>
-      <th width="180" height="35">Industry</th>
-    </tr><br>
+      <tr bgcolor="white" align="center">
+        <td>Maruti</td>
+        <td>Swift</td>
+        <td>800-62-3242</td>
+        <td>Delhi</td>
+        <td>India</td>
+        <td>16,000</td>
+        <td>Automotive</td>
+      </tr>
+      <br />
 
-    <tr bgcolor="lightgrey" align="center">
-      <td>Dodge</td>
-      <td>Challenger</td>
-      <td>800-22-7900</td>
-      <td>Auburn Hills</td>
-      <td>USA</td>
-      <td>10,000</td>
-      <td>Automotive</td>
-    </tr><br>
+      <tr bgcolor="lightgrey" align="center">
+        <td>Jeep</td>
+        <td>Wrangler</td>
+        <td>800-22-6242</td>
+        <td>Auburn Hills</td>
+        <td>USA</td>
+        <td>10,000</td>
+        <td>Automotive</td>
+      </tr>
+      <br />
 
-    <tr bgcolor="white" align="center">
-      <td>Maruti</td>
-      <td>Swift</td>
-      <td>800-62-3242</td>
-      <td>Delhi</td>
-      <td>India</td>
-      <td>16,000</td>
-      <td>Automotive</td>
-    </tr><br>
-
-    <tr bgcolor="lightgrey" align="center">
-      <td>Jeep</td>
-      <td>Wrangler</td>
-      <td>800-22-6242</td>
-      <td>Auburn Hills</td>
-      <td>USA</td>
-      <td>10,000</td>
-      <td>Automotive</td>
-    </tr><br>
-
-    <tr bgcolor="white" align="center">
-      <td>BMW</td>
-      <td>BMW 5 Series</td>
-      <td>800-00-1252</td>
-      <td>Munchen</td>
-      <td>Germany</td>
-      <td>110,000</td>
-      <td>Automotive</td>
-    </tr><br>
+      <tr bgcolor="white" align="center">
+        <td>BMW</td>
+        <td>BMW 5 Series</td>
+        <td>800-00-1252</td>
+        <td>Munchen</td>
+        <td>Germany</td>
+        <td>110,000</td>
+        <td>Automotive</td>
+      </tr>
+      <br />
     </table>
-
   </body>
 </html>
